lazysizes working with stretching bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,63 @@
-.grid-sizer, .grid-item {
+/**, :before, :after {
+  box-sizing: border-box;
+}*/
+
+.grid-item {
   width: 100%;
+  height: 0;
+  position: relative;
+  margin-bottom: 10px;
+  transition: all 350ms cubic-bezier(0.5, 0, 0.2, 1);
 }
 
 @media only screen and (min-width: 70em) {
-  .grid-sizer, .grid-item {
+  .grid-item {
     width: calc((100% - 20px)/3);
   }
 }
 
 @media only screen and (min-width: 50em) and (max-width: 70em) {
-  .grid-sizer, .grid-item {
+  .grid-item {
     width: calc((100% - 10px)/2);
   }
 }
 
-img.grid-item {
-  margin-bottom: 10px;
-  transition: all 350ms cubic-bezier(0.5, 0, 0.2, 1);
+.grid {
+  position: relative;
+  width: 100%;
 }
 
-img.grid-item:hover {
+/*.grid-item {
+
+}*/
+
+/*.grid-item:before {
+  content: '';
+  display: inline-block;
+  padding-top: 60%;
+}*/
+
+.grid-item:hover {
   transform: scale(1.005);
   box-shadow: 0 20px 50px -15px rgba(0,0,0,0.35);
+}
+
+.grid-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.lazyload {
+  background: #f7f7f7;
+}
+
+.lazyloading {
+  background: #f7f7f7 url(http://afarkas.github.io/lazysizes/assets/imgs/loader.gif) no-repeat center;
+  min-height: 60px;
 }
 
 /*div.grid-item-wrapper {
